# craft-deneme

./: .gitignore  GameBootstrap.cs  LobbyManager.cs  MASTER_PLAN.md  NetworkPlayerController.cs  ObjectPool.cs  PlayerLook.cs  README.md  VoxelChunk.cs  VoxelWorld.cs  index.html  package-lock.json  package.json
.github/workflows/: tauri.yml
assets/vehicles/: 1936_bugatti_type_57_s_roadster.glb  2020_brabham_bt62.glb  vehicles.json  vehicles.schema.json
assets/vehicles/opel calibra/: license.txt  scene.gltf
css/: main-menu.css
docs/: VEHICLE_SYSTEM.md
js/: biomes.js  blocks.js  chunk.js  crafting.js  inventory.js  menu.js  mobs.js  noise.js  ores.js  performance.js  plants.js  player.js  racing-multiplayer.js  racing-ui.js  racing-vehicle.js  racing.js  trees.js  vehicle-manager.js  vehicle.js  worker.js
scripts/: build.js  dev-server.js  generate-vehicles-json.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
